[package]
name = "sic-tracey"
version = "0.1.0"
edition = "2021"

# build statically


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
derive-visitor = { version = "0.3.0" }
eyre = "0.6.8"
nom = "7.1.3"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = { version = "1.0.93", features = ["preserve_order"] }
uuid = { version = "1.3.0", features = ["serde", "v7", "std"], default-features = false }
walkdir = "2.3.2"
